crates/ferrum-interfaces/tests/ui/vnext/fail/active_sequence_abort_receipt_cannot_be_constructed.stderr
error[E0451]: fields `plan`, `sequence_authority`, `run_id`, `request_id`, `activation_epoch`, `runtime_implementation_fingerprint` and `disposition` of struct `ferrum_interfaces::vnext::ActiveSequenceAbortReceipt` are private
  --> tests/ui/vnext/fail/active_sequence_abort_receipt_cannot_be_constructed.rs:10:9
   |
 9 |     let _ = ActiveSequenceAbortReceipt {
   |             -------------------------- in this type
10 |         plan,
   |         ^^^^ private field
11 |         sequence_authority,
   |         ^^^^^^^^^^^^^^^^^^ private field
12 |         run_id,
   |         ^^^^^^ private field
13 |         request_id,
   |         ^^^^^^^^^^ private field
14 |         activation_epoch: 1,
   |         ^^^^^^^^^^^^^^^^ private field
15 |         runtime_implementation_fingerprint: "0".repeat(64),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private field
16 |         disposition: ActiveSequenceAbortDisposition::SynchronizedAndPoisoned,
   |         ^^^^^^^^^^^ private field
